# voice_diagnosis_project

./: .gitignore  DEPLOYMENT_GUIDE.md  README.md  environment.yml  quick_setup.bat  quick_setup.sh  requirements.txt  未命名绘图.drawio
backend/: .env.example  README.md  README_ENV.md  alembic.ini  main.py  pyproject.toml  requirements.txt  setup.py
backend/alembic/: env.py
backend/alembic/versions/: 1be8ff42b15b_init.py  1f96afcc6566_update_relationship_names.py  443a6ca99e5b_remove_created_at_from_users_table.py  add_user_fields.py  add_username_field.py  update_relationships.py
backend/app/: __init__.py
backend/app/api/: __init__.py
backend/app/controllers/: auth_controller.py  dashboard_controller.py  diagnosis_controller.py  llm_controller.py  user_controller.py
backend/app/core/: __init__.py  auth.py  config.py  llm.py  password_utils.py  security.py
backend/app/crud/: __init__.py  user.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/repositories/: auth_repository.py  diagnosis_repository.py  llm_repository.py  user_repository.py
backend/app/schemas/: __init__.py  token.py  user.py  voice.py  voice_metrics.py
backend/app/services/: __init__.py  auth_service.py  llm_service.py  microphone_test_service.py  model_service.py  user_service.py  voice_analysis_service.py
backend/app/utils/: voice_models_utils.py
backend/scripts/: README_MYSQL.md  generate_er.py  init_database.py  init_mysql_db.py  migrate_schema.py  remove_user_settings.py  setup_env.py  setup_mysql_env.sh  test_llm_api.py  test_voice_model.py  update_visualization.py
(+128 files in other folders)
